Version 0.7 -- Subversion
-----------------

* Added horizontal option to dhtmlmenu (leen)
* Added new admin style (thijs)
* Added language as a user perference and also moved it to the login page
* Added java based syntax highlighting as a user preference
* Added support for mysql 4.1+ using the mysqli adodb driver
* Added cancel link to login page that redirects back to site (#6)
* Fixed News module so that post date shows on newly created items (#5)
* Fixed bug with start and end dates when adding new News item (BamaRob)
* Fixed missing template option for News module (trac #67)
* Updated adodb to 4.53

Version 0.6.3 -- Wed Sep 22 2004 
-----------------

* Fixed a very bad bug where you can login with no password

Version 0.6.2 -- Tue Sep 20 2004 
-----------------

* Added Chinese translations (ray)
* Added dateformat parameter to News
* Added showtemplate parameter to moduleinterface.php, so you can do things
like show just an RSS feed and nothing else.
* Fixed a bug with html entities not getting converted properly after preview
or saved. (Fixes #62, #65)
* Fixed bug with bug with news when it's the content type.
* Updated the defalt website to be a little more up to date with the current
feature set

Version 0.6.1 -- Tue Sep 14 2004
-----------------

* Added section header content type
* Added cms_selflink plugin
* Added some functionality to the News module (make sure you upgrade it)
* Added Dutch translation (Thijs)
* Changed login and logout to work properly in IIS (Fixes #60)
* Fixed a bug with view page in listcontent (Fixes #61)
* Fixed so only content pages can be set as default (Fixes #59)
* Started moving code to an easy object oriented design
* Updated smarty to 2.6.5

Version 0.6 -- Wed Sep 01 2004
-----------------

* Added User Defined Tags (user defined php code editable in the admin)
* Added advanced CSS management for doing CSS in chunks instead of entirely
in the template
* Added Finnish translation
* Added user defined 404 messages